# hospital_env_meta

./: .dockerignore  Dockerfile  README.md  baseline.py  comparison_utils.py  dashboard_api.py  dynamics.py  env.py  ethical_comparison.py  event_demo.py  events.py  grader.py  inference.py  models.py  multi_agent.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  uncertainty.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CompareModesPanel.jsx  ControlPanel.jsx  DecisionPanel.jsx  EventBanner.jsx  Header.jsx  MetricsPanel.jsx  PatientPanel.jsx  ResourcePanel.jsx  SectionCard.jsx
frontend/src/lib/: api.js
server/: __init__.py  app.py
tasks/: __init__.py  advanced_fairness.py  advanced_fog.py  easy.py  hard.py  medium.py
